[metadata]
name = PyRCN
version = 0.0.16
author = Peter Steiner
author_email = peter.steiner@pyrcn.net
description = A scikit-learn-compatible framework for Reservoir Computing in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TUD-STKS/PyRCN
project_urls =
    Documentation = https://pyrcn.readthedocs.io/
    Funding = https://pyrcn.net/
    Source = https://github.com/TUD-STKS/PyRCN/
    Bug Tracker = https://github.com/TUD-STKS/PyRCN/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[flake8]
# Default flake8 3.5 ignored flags
ignore=E121,E123,E126,E226,E24,E265,E704,W503
# It's fine not to put the import at the top of the file in the examples
# folder.
per-file-ignores =
    examples/*: E402
max-line-length = 88
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.venv,.env,venv,env,.ipynb_checkpoints

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[tool:pytest]
testpaths =
    tests