[metadata]
name = PyRCN
version = 0.0.17
author = Peter Steiner
author_email = peter.steiner@pyrcn.net
description = A scikit-learn-compatible framework for Reservoir Computing in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TUD-STKS/PyRCN
project_urls =
    Documentation = https://pyrcn.readthedocs.io/
    Funding = https://pyrcn.net/
    Source = https://github.com/TUD-STKS/PyRCN/
    Bug Tracker = https://github.com/TUD-STKS/PyRCN/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
